--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WarIndex</title>
+    <title>OrderBookBalance</title>
 </head>
 <script src="pkg/system.js"></script>
 <script src="config.js"></script>
